# yake-rust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  rustfmt.toml  rusty-hook.toml
.github/workflows/: ci.yml  pypi.yml
python/: Cargo.toml  LICENSE  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  tox.ini
python/src/: lib.rs
python/src/yake_rust/: __init__.py  _interface.py  _lib.pyi
python/tests/: __init__.py  test_interface.py  test_yake_rust.py
server/: Cargo.toml  README.md
server/src/: main.rs
shortcuts/: fetch-datasets.sh  pre-commit-hook.sh  pre-push.sh
src/: levenshtein.rs
yake/: Cargo.toml
yake/src/: cli.rs  main.rs
yake_rust/: Cargo.toml  README.md
yake_rust/benches/: bench.rs
yake_rust/src/: context.rs  counter.rs  levenshtein.rs  lib.rs  plural_helper.rs  preprocessor.rs  result_item.rs  stop_words.txt  stopwords.rs  tag.rs  test_data_1.txt  test_data_3.txt  test_data_4.txt  test_data_5.txt  test_data_7.txt  test_es.txt  test_fi.txt  test_german.txt  test_google.txt  test_nl.txt  test_pl.txt  test_pt_1.txt  test_tr.txt  tests.rs
yake_rust/src/samples/: test_ar.txt  test_data_2.txt  test_data_6.txt  test_fr.txt  test_genius.txt  test_gitter.txt  test_it.txt  test_pt_2.txt
yake_rust/src/stopwords/: da.txt  el.txt  en.txt  et.txt  hi.txt  hr.txt  hu.txt  it.txt  lt.txt  lv.txt  mod.rs  nl.txt  pt.txt  sk.txt  sl.txt  uk.txt
yake_rust/tests/: sanity.rs
