[package]
name = "yake-rust-python-bindings"
publish = false
edition = "2021"
readme = "README.md"
license = "LICENSE"
repository = "https://github.com/quesurifn/yake-rust"

[dependencies]
pyo3 = "0.23.4"
yake-rust = { path = "../yake_rust" }

[lib]
name = "yake_rust"
path = "src/lib.rs"
crate-type = ["cdylib"]
