[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
yake-rust = {path = "../yake_rust", features = ["default", "serde"]}
tokio = {version = "1.44.1", features = ["rt-multi-thread"]}
log = "0.4.26"
config = "0.15.11"
serde = { version = "1.0.217", features = ["derive"] }

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 16

[profile.production]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true  # Automatically strip symbols from the binary
panic = "abort"
