[package]
name = "yake-rust"
version = "0.2.0"
edition = "2021"
authors = ["Kyle Fahey <kyle.c.r.fahey@gmail.com>"]
keywords = ["keyword", "nlp", "keywords", "extractor"]
repository = "https://github.com/quesurifn/yake-rust"
description = "Yake (Yet Another Keyword Extractor) in Rust"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
  "ar", "bg", "br", "cz", "da", "de", "el", "en", "es", "et", "fa", "fi", "fr", "hi", "hr", "hu", "hy", "id", "it", "ja",
  "lt", "lv", "nl", "no", "pl", "pt", "ro", "ru", "sk", "sl", "sv", "tr", "uk", "zh"
]
ar = []
bg = []
br = []
cz = []
da = []
de = []
el = []
en = []
es = []
et = []
fa = []
fi = []
fr = []
hi = []
hr = []
hu = []
hy = []
id = []
it = []
ja = []
lt = []
lv = []
nl = []
no = []
pl = []
pt = []
ro = []
ru = []
sk = []
sl = []
sv = []
tr = []
uk = []
zh = []

[dependencies]
regex = "1"
streaming-stats = "0.2.3"
contractions = "0.5.4"
unicode-segmentation = "1.12.0"
levenshtein = "1.0.5"
indexmap = "2.7.0"

[lib]
path = "src/lib.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
