[package]
name = "yake-rust"
version = "0.2.0"
edition = "2021"
authors = ["Kyle Fahey <kyle.c.r.fahey@gmail.com>"]
keywords = ["keyword", "nlp", "keywords", "extractor"]
repository = "https://github.com/quesurifn/yake-rust"
description = "Yake (Yet Another Keyword Extractor) in Rust"
readme = "../README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "ar", "bg", "br", "cz", "da", "de", "el", "en", "es", "et", "fa", "fi", "fr", "hi", "hr", "hu", "hy", "id", "it", "ja",
    "lt", "lv", "nl", "no", "pl", "pt", "ro", "ru", "sk", "sl", "sv", "tr", "uk", "zh"
]
ar = []
bg = []
br = []
cz = []
da = []
de = []
el = []
en = []
es = []
et = []
fa = []
fi = []
fr = []
hi = []
hr = []
hu = []
hy = []
id = []
it = []
ja = []
lt = []
lv = []
nl = []
no = []
pl = []
pt = []
ro = []
ru = []
sk = []
sl = []
sv = []
tr = []
uk = []
zh = []

[dependencies]
regex = "1"
streaming-stats = "0.2.3"
contractions = "0.5.4"
segtok = "0.1.2"
levenshtein = "1.0.5"
indexmap = "2.7.0"
serde = { version = "1.0.217", optional = true }

[dev-dependencies]
divan = "0.1.17"
rusty-hook = { workspace = true }
pretty_assertions = "1.4.1"
zip = { version = "2.2.2" }

[lib]
path = "src/lib.rs"

[[bench]]
name = "bench"
harness = false

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
